# GL-Projects

./: README.md
glfwAppStartingTemplate/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
glfwAppStartingTemplate/includes/GL/: freeglut.h  glew.h
glfwAppStartingTemplate/includes/glad/: glad.c  glad.h
